--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -3,38 +3,24 @@
     <h2><%= Challenge.find(@booking.challenge_id).name %></h2>
   </div>
 </div>
+<div class="container">
+  <div class="mt-3 head">
+    <div class="<%= Challenge.find(@booking.challenge_id).category.downcase %>-icon icons details">
+      <i class="fa-solid <%= find_icon(Challenge.find(@booking.challenge_id).category) %> top-icon"></i>
+    </div>
+    <div class="description">
+      <p><%= Challenge.find(@booking.challenge_id).description %></p>
+      <p>My Goal: <%= @booking.goal %></p>
+    </div>
+  </div>
+    <h4>Need some tips</h4>
 
-<ul>
-  <li><p>Category: <%= Challenge.find(@booking.challenge_id).category %></p></li>
-  <li><p>Description: <%= Challenge.find(@booking.challenge_id).description %></p></li>
-  <li><p>My Goal: <%= @booking.goal %></p></li>
-</ul>
-
-
-<h4>Need some tips</h4>
-
-<div>
-  <h1 class="text-center pt-3"><%= Challenge.find(@booking.challenge_id).name %></h1>
-  <ul class="ultips">
-    <li>
-      <p>Category: <%= Challenge.find(@booking.challenge_id).category %></p>
-    </li>
-    <li>
-      <p>Description: <%= Challenge.find(@booking.challenge_id).description %></p>
-    </li>
-    <li>
-      <p>My Goal: <%= @booking.goal %>
-    </p></li>
-  </ul>
-
-  <h4>Need some tips</h4>
-
-  <ul class="ultips">
+  <ul class="mt-3 ps-0">
     <% @tips.each do |tip| %>
     <div class="cardtips">
-      <a class="tipsimage" href="#">
-        <i class="fa-solid fa-utensils"></i>
-      </a>
+      <div class="<%= Challenge.find(@booking.challenge_id).category.downcase %>-icon icons tipsimage ">
+        <i class="fa-solid <%= find_icon(Challenge.find(@booking.challenge_id).category) %>"></i>
+      </div>
       <li>
       <div class="info d-flex justify-content-between">
         <h5><strong><%= tip.name %></strong><br></h5>
@@ -54,12 +40,12 @@
     <% end %>
   </ul>
 
-  <ul class="ultips">
+  <ul class="mt-3 ps-0">
     <% @all_saved_tips.each do |saved_tip| %>
     <div class="cardtips">
-      <a class="tipsimage" href="#">
-        <i class="fa-solid fa-utensils"></i>
-      </a>
+      <div class="<%= Challenge.find(@booking.challenge_id).category.downcase %>-icon icons tipsimage ">
+        <i class="fa-solid <%= find_icon(Challenge.find(@booking.challenge_id).category) %>"></i>
+      </div>
       <li>
         <% if saved_tip.class == SavedTip %>
           <div class="info d-flex justify-content-between">
@@ -98,4 +84,5 @@
       <%= link_to "Redo this challenge", challenge_path(@retry_challenge) %>
     <% end %>
   </div>
+
 </div>
