--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -8,32 +8,34 @@
   <div class="mt-3 head">
     <div class="<%= @challenge.category.downcase %>-icon icons details">
       <i class="fa-solid <%= find_icon(@challenge.category) %> top-icon"></i>
+    </div>
+    <div class="description">
       <p><%= @challenge.description %></p>
     </div>
   </div>
 
-  <h4>Need some tips</h4>
+  <h3>Need some tips</h3>
 
   <ul class="mt-3 ps-0">
     <% @tips.each do |tip| %>
     <div class="cardtips">
-      <a class="tipsimage" href="#">
-        <i class="fa-solid fa-utensils"></i>
-      </a>
-      <li>
-      <div class="info d-flex justify-content-between">
-        <h5><strong><%= tip.name %></strong><br></h5>
-        <% if tip.class == Tip %>
-          <%= link_to tip_saved_tips_path(tip), data: {turbo_method: :post}, class:"tipsicon mt-2 me-2" do %>
-            <i class="fa-regular fa-bookmark"></i>
-          <% end %>
-        <% else tip.class == Usertip %>
-          <%= link_to usertip_saved_user_tips_path(tip), data: {turbo_method: :post}, class:'tipsicon mt-2 me-2' do %>
-            <i class="fa-regular fa-bookmark"></i>
-          <% end %>
-        <% end %>
+      <div class="<%= @challenge.category.downcase %>-icon icons tipsimage ">
+       <i class="fa-solid <%= find_icon(@challenge.category) %>"></i>
       </div>
-      <p class="padding-right"><%= tip.description.truncate(40) %></p>
+      <li>
+        <div class="info d-flex justify-content-between">
+          <h5><strong><%= tip.name %></strong><br></h5>
+          <% if tip.class == Tip %>
+            <%= link_to tip_saved_tips_path(tip), data: {turbo_method: :post}, class:"tipsicon mt-2 me-2" do %>
+              <i class="fa-regular fa-bookmark"></i>
+            <% end %>
+          <% else tip.class == Usertip %>
+            <%= link_to usertip_saved_user_tips_path(tip), data: {turbo_method: :post}, class:'tipsicon mt-2 me-2' do %>
+              <i class="fa-regular fa-bookmark"></i>
+            <% end %>
+          <% end %>
+        </div>
+        <p class="padding-right"><%= tip.description.truncate(40) %></p>
       </li>
     </div>
     <% end %>
@@ -41,9 +43,9 @@
   <ul class="mt-3 ps-0">
     <% @all_saved_tips.each do |saved_tip| %>
     <div class="cardtips">
-      <a class="tipsimage" href="#">
-        <i class="fa-solid fa-utensils"></i>
-      </a>
+      <div class="<%= @challenge.category.downcase %>-icon icons tipsimage ">
+        <i class="fa-solid <%= find_icon(@challenge.category) %>"></i>
+      </div>
       <li>
       <% if saved_tip.class == SavedTip %>
         <div class="info d-flex justify-content-between">
