--- a/app/assets/stylesheets/challenges/_show.scss
+++ b/app/assets/stylesheets/challenges/_show.scss
@@ -47,3 +47,13 @@
 .cardtips .purchase-icon i {
   color: #f5aee1;
 }
+.progress-bar {
+  background-color: #115549;
+}
+.progress {
+  --bs-progress-bar-color: #fff;
+  border-radius: 50px;
+  background-color: #f9f9f1;
+  height: 25px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.4);
+}
