--- a/app/assets/stylesheets/pages/_form_eco.scss
+++ b/app/assets/stylesheets/pages/_form_eco.scss
@@ -4,14 +4,16 @@ a {
 }
 
 .up-nav {
+  left: 0;
   position: fixed;
-  bottom: 3.9rem;
+  bottom: 1.9rem;
   background-color: white;
+  padding-bottom: 1rem;
 }
 
 .up-nav2 {
   position: fixed;
-  bottom: 3.9rem;
+  bottom: 1.9rem;
   background-color: white;
 }
 
