--- a/app/assets/stylesheets/components/_font.scss
+++ b/app/assets/stylesheets/components/_font.scss
@@ -4,6 +4,11 @@ h1 {
   color:#115549;
 }
 
+h2, h3, h4, {
+  font-family: 'Poppins', sans-serif;
+  color: rgb(50, 50, 50);
+}
+
 p {
   font-family: 'Open Sans', sans-serif;
   color: rgb(50, 50, 50);
