--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -35,12 +35,11 @@
 }
 
 .header-no-avatar {
-  padding-right: 0.75rem;
-  padding-left: 0.75rem;
+  padding: 0.75rem;
   background-color: #115549;
 }
 
-.title-no-avatar h2 {
+.header-no-avatar h2 {
   padding: 5px;
   color: white;
   margin: 0px;
