--- a/app/assets/stylesheets/components/_navbar_eco.scss
+++ b/app/assets/stylesheets/components/_navbar_eco.scss
@@ -6,6 +6,7 @@
   border-bottom: white;
   a.nav-link {
     padding: 0;
+    color: #a3baa3;
     &.current-page {
       border-bottom: solid 3px;
       border-color: #125549;
