--- a/app/views/seniorities/index.html.erb
+++ b/app/views/seniorities/index.html.erb
@@ -1,9 +1,9 @@
 <div class="header">
   <div class="title-avatar">
-    <h1>Seniorities</h1>
+    <h1>Levels</h1>
     <%= image_tag current_user.avatar %>
   </div>
-  <p>Discover the seniorities</p>
+  <p>Complete 5 challenges to unlock the next level.</p>
 </div>
 
 <div class="container-nav">
