--- a/app/assets/stylesheets/components/_card_challenge.scss
+++ b/app/assets/stylesheets/components/_card_challenge.scss
@@ -2,13 +2,12 @@
 .card-challenge {
   background-color: white;
   border-radius: 4px;
-  padding: 1em;
-  box-shadow: 0px 23px 30px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.25);
   display: flex;
-  padding: 3%;
+  padding: 0.5rem;
   align-items: center;
-  margin-bottom: 6%;
-  height: 36%;
+  margin-bottom: 1rem;
+  height: 9rem;
 }
 
 .card-challenge-infos {
