--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,32 +1,24 @@
 <div class="container-form">
-  <ul class="list-inline mb-2">
-    <%= simple_form_for [@challenge, @booking], html:{class: "d-flex align-items-center"} do |f| %>
-    <li class="list-inline-item">
+  <ul class="d-flex mb-2 buttons-booking p-0 w-100">
+    <%= simple_form_for [@challenge, @booking], html:{class: "d-flex align-items-center w-100 flex-column "} do |f| %>
+    <li class="d-flex justify-content-around">
       <% if @booking.persisted? %>
         <div class="form-check form-switch" id="form-switch-status">
-          <%= f.input :status, as: :boolean, class: "form-check-input", label: "Succeed" %>
+          <%= f.input :status, as: :boolean, class: "form-check-input", label: false %>
         </div></li>
-    <li class="list-inline-item">
+    <li class="d-flex justify-content-around">
       <% else %>
-        <div data-controller="booking-goal">
-          <p data-booking-goal-target="goal">Set your goal: 50%</p>
+        <div class="booking-goal" data-controller="booking-goal">
+          <h3 data-booking-goal-target="goal">Set goal: 50%</h3>
           <p><%= f.input :goal, as: :range, label: false, input_html: { data: { action:'input->booking-goal#updateGoal' } } %></p>
         </div>
       <% end %></li>
       <% Time.now.strftime('%U') %>
       <% if @booking.persisted? %>
-        <%= f.submit "Confirm the evaluation", class: "btn-grad"%>
+        <%= f.submit "Confirm success", class: "btn-grad btn-success"%>
       <% else %>
         <%= f.submit "Add this challenge", class: "btn-grad" %>
       <% end %>
     <% end %>
   </ul>
-  <div class="remove-challenge">
-    <% if policy(@booking).destroy? %>
-      <%= link_to booking_path(@booking), data: {turbo_method: :delete, turbo_confirm: 'Are you sure?'} do %>
-        <i class="fa-regular fa-trash-can"></i>
-        <p>Remove this challenge</p>
-      <% end %>
-    <% end %>
-  </div>
 </div>
