--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -11,11 +11,18 @@
     <div class="description">
       <p><%= Challenge.find(@booking.challenge_id).description %></p>
     </div>
-    <p>My Goal:</p>
+    <h4 class="text-center">My Goal:</h4>
     <div class="progress">
       <div class="progress-bar" role="progressbar" style="width: <%= @booking.goal %>%;" aria-valuenow="<%= @booking.goal %>" aria-valuemin="0" aria-valuemax="100"><%= @booking.goal %>%</div>
     </div>
   </div>
+  <% if policy(@booking).destroy? %>
+      <p class="d-flex justify-content-around remove-challenge">
+        <%= link_to booking_path(@booking), data: {turbo_method: :delete, turbo_confirm: 'Are you sure?'} do %>
+          <i class="fa-regular fa-trash-can"></i> J'abandonne, je lâche l'affaire !
+        <% end %>
+      </p>
+  <% end %>
     <h4>Need some tips</h4>
 
   <ul class="mt-3 ps-0">
@@ -72,7 +79,7 @@
     <% end %>
   </ul>
 
-  <div class="up-nav2 pb-4">
+  <div class="up-nav pb-4">
     <% if @booking.status == false %>
       <% if policy(@booking).edit? %>
         <%= render "bookings/form", bookings: @booking %>
