--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -13,8 +13,9 @@
       <p><%= @challenge.description %></p>
     </div>
   </div>
+  <div><%= render "bookings/form", bookings: @booking %></div>
 
-  <h3>Need some tips</h3>
+  <h4 class="mt-4">Need some tips</h4>
 
   <ul class="mt-3 ps-0">
     <% @tips.each do |tip| %>
@@ -69,6 +70,5 @@
     <% end %>
   </ul>
 
-  <div class="up-nav"><%= render "bookings/form", bookings: @booking %></div>
 
 </div>
