--- a/app/views/pages/profile_tips.html.erb
+++ b/app/views/pages/profile_tips.html.erb
@@ -7,7 +7,7 @@
   </div>
 
 <div class="container-nav" data-controller="tips-card">
-  
+
   <div class="accordion" id="accordionPanelsStayOpenExample">
     <div class="accordion-item">
       <h2 class="accordion-header" id="panelsStayOpen-headingOne">
@@ -91,8 +91,7 @@
   </div>
 </div>
 
-<ul class="btn-sticky-tips list-inline">
-  <li class="list-inline-item btn-create-tips"><%= link_to "Create a new tip", new_usertip_path %></li>
-  <li class="list-inline-item"><%= link_to "Save a new tip", tipsindex_path, class: "btn btn-grad" %></li>
-</ul>
-
+<div class="btn-sticky-tips list-inline">
+  <%= link_to "Create a new tip", new_usertip_path, class: "btn-create-tips" %>
+  <%= link_to "Look for a new tip", tipsindex_path, class: "btn btn-grad" %>
+</div>
