--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -18,7 +18,7 @@
   <% if policy(@booking).destroy? %>
       <p class="d-flex justify-content-around remove-challenge">
         <%= link_to booking_path(@booking), data: {turbo_method: :delete, turbo_confirm: 'Are you sure?'} do %>
-          <i class="fa-regular fa-trash-can"></i> J'abandonne, je lâche l'affaire !
+          <i class="fa-regular fa-trash-can"></i> I quit this challenge
         <% end %>
       </p>
   <% end %>
@@ -49,7 +49,7 @@
     <% end %>
   </ul>
 
-  <ul class="mt-3 ps-0">
+  <ul class="mt-3 ps-0 margin-b-show">
     <% @all_saved_tips.each do |saved_tip| %>
     <div class="cardtips">
       <div class="<%= Challenge.find(@booking.challenge_id).category.downcase %>-icon icons tipsimage ">
