--- a/app/assets/stylesheets/challenges/_show.scss
+++ b/app/assets/stylesheets/challenges/_show.scss
@@ -33,10 +33,10 @@
   background-color: #f5aee1;
 }
 
-.progress-bar {
+.progress-bar-goal {
   background-color: #115549;
 }
-.progress {
+.progress-goal {
   --bs-progress-bar-color: #fff;
   border-radius: 50px;
   background-color: #f9f9f1;
