--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -10,8 +10,7 @@
 }
 
 .text-banner {
-  margin-left: 15px;
-  margin-right: 15px;
+  margin: 0 2rem;
 }
 
 .home-title h1 {
@@ -20,8 +19,9 @@
 }
 
 .carousel {
-  margin: 25px 15px;
-  box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
+  margin: 0 1rem;
+  margin-top: 1rem;
+  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
 }
 
