--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -11,8 +11,8 @@
       <p><%= Challenge.find(@booking.challenge_id).description %></p>
     </div>
     <h4 class="text-center">My Goal:</h4>
-    <div class="progress">
-      <div class="progress-bar" role="progressbar" style="width: <%= @booking.goal %>%;" aria-valuenow="<%= @booking.goal %>" aria-valuemin="0" aria-valuemax="100"><%= @booking.goal %>%</div>
+    <div class="progress progress-goal">
+      <div class="progress-bar progress-bar-goal" role="progressbar" style="width: <%= @booking.goal %>%;" aria-valuenow="<%= @booking.goal %>" aria-valuemin="0" aria-valuemax="100"><%= @booking.goal %>%</div>
     </div>
   </div>
   <% if policy(@booking).destroy? %>
@@ -27,22 +27,20 @@
   <ul class="mt-3 ps-0">
     <% @tips.each do |tip| %>
     <div class="cardtips">
-      <div class="<%= Challenge.find(@booking.challenge_id).category.downcase %>-icon icons tipsimage ">
+      <div class="<%= Challenge.find(@booking.challenge_id).category.downcase %>-icon tipsimage ">
         <i class="fa-solid <%= find_icon(Challenge.find(@booking.challenge_id).category) %>"></i>
       </div>
       <li>
-      <div class="info d-flex justify-content-between">
-        <h5><strong><%= tip.name %></strong><br></h5>
-        <% if tip.class == Tip %>
-          <%= link_to tip_saved_tips_path(tip), data: {turbo_method: :post}, class:"tipsicon mt-2 me-2" do %>
-            <i class="fa-regular fa-bookmark"></i>
-          <% end %>
-        <% else tip.class == Usertip %>
-          <%= link_to usertip_saved_user_tips_path(tip), data: {turbo_method: :post}, class:"tipsicon mt-2 me-2" do %>
-            <i class="fa-regular fa-bookmark"></i>
-          <% end %>
+      <h5><strong><%= tip.name %></strong><br></h5>
+      <% if tip.class == Tip %>
+        <%= link_to tip_saved_tips_path(tip), data: {turbo_method: :post}, class:"tipsicon mt-2 me-2" do %>
+          <i class="fa-regular fa-bookmark"></i>
         <% end %>
-      </div>
+      <% else tip.class == Usertip %>
+        <%= link_to usertip_saved_user_tips_path(tip), data: {turbo_method: :post}, class:"tipsicon mt-2 me-2" do %>
+          <i class="fa-regular fa-bookmark"></i>
+        <% end %>
+      <% end %>
       <p class="description desc-truncate" data-action="click->tips-card#revealDescription"><%= tip.description %></p>
       </li>
     </div>
@@ -52,25 +50,21 @@
   <ul class="mt-3 ps-0">
     <% @all_saved_tips.each do |saved_tip| %>
     <div class="cardtips">
-      <div class="<%= Challenge.find(@booking.challenge_id).category.downcase %>-icon icons tipsimage ">
+      <div class="<%= Challenge.find(@booking.challenge_id).category.downcase %>-icon tipsimage ">
         <i class="fa-solid <%= find_icon(Challenge.find(@booking.challenge_id).category) %>"></i>
       </div>
       <li>
         <% if saved_tip.class == SavedTip %>
-          <div class="info d-flex justify-content-between">
-            <h5><strong><%= saved_tip.tip.name %></strong><br></h5>
-            <%= link_to saved_tip_path(saved_tip), data: {turbo_method: :delete}, class:"tipsicon mt-2 me-2" do %>
-              <i class="fa fa-bookmark"></i>
-            <% end %>
-          </div>
+          <h5><strong><%= saved_tip.tip.name %></strong><br></h5>
+          <%= link_to saved_tip_path(saved_tip), data: {turbo_method: :delete}, class:"tipsicon mt-2 me-2" do %>
+            <i class="fa fa-bookmark"></i>
+          <% end %>
           <p class="description desc-truncate" data-action="click->tips-card#revealDescription"><%= saved_tip.tip.description %></p>
         <% else saved_tip.class == SavedUserTip %>
-          <div class="info d-flex justify-content-between">
-            <h5><strong><%= saved_tip.usertip.name %></strong><br></h5>
-            <%= link_to saved_user_tip_path(saved_tip), data: {turbo_method: :delete}, class:"tipsicon mt-2 me-2" do %>
-              <i class="fa fa-bookmark"></i>
-            <% end %>
-          </div>
+          <h5><strong><%= saved_tip.usertip.name %></strong><br></h5>
+          <%= link_to saved_user_tip_path(saved_tip), data: {turbo_method: :delete}, class:"tipsicon mt-2 me-2" do %>
+            <i class="fa fa-bookmark"></i>
+          <% end %>
           <p class="description desc-truncate" data-action="click->tips-card#revealDescription"><%= saved_tip.usertip.description %><br></p>
         <% end %>
       </li>
