--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -18,7 +18,7 @@
   <ul class="mt-3 ps-0">
     <% @tips.each do |tip| %>
     <div class="cardtips">
-      <div class="<%= @challenge.category.downcase %>-icon icons tipsimage ">
+      <div class="<%= @challenge.category.downcase %>-icon tipsimage">
        <i class="fa-solid <%= find_icon(@challenge.category) %>"></i>
       </div>
       <li>
@@ -47,20 +47,16 @@
       </div>
       <li>
       <% if saved_tip.class == SavedTip %>
-        <div class="info d-flex justify-content-between">
-          <h5><strong><%= saved_tip.tip.name %></strong><br></h5>
-          <%= link_to saved_tip_path(saved_tip), data: {turbo_method: :delete}, class:"tipsicon mt-2 me-2" do %>
-            <i class="fa fa-bookmark"></i>
-          <% end %>
-        </div>
+        <h5><strong><%= saved_tip.tip.name %></strong><br></h5>
+        <%= link_to saved_tip_path(saved_tip), data: {turbo_method: :delete}, class:"tipsicon mt-2 me-2" do %>
+          <i class="fa fa-bookmark"></i>
+        <% end %>
         <p class="description desc-truncate" data-action="click->tips-card#revealDescription"><%= saved_tip.tip.description %></p>
       <% else saved_tip.class == SavedUserTip %>
-        <div class="info d-flex justify-content-between">
-          <h5><strong><%= saved_tip.usertip.name %></strong><br></h5>
-          <%= link_to saved_user_tip_path(saved_tip), data: {turbo_method: :delete}, class:'tipsicon mt-2 me-2' do %>
-            <i class="fa fa-bookmark"></i>
-          <% end %>
-        </div>
+        <h5><strong><%= saved_tip.usertip.name %></strong><br></h5>
+        <%= link_to saved_user_tip_path(saved_tip), data: {turbo_method: :delete}, class:'tipsicon mt-2 me-2' do %>
+          <i class="fa fa-bookmark"></i>
+        <% end %>
         <p class="description desc-truncate" data-action="click->tips-card#revealDescription"><%= saved_tip.usertip.description %></p>
       <% end %>
       </li>
