--- a/app/views/pages/_tips_list.html.erb
+++ b/app/views/pages/_tips_list.html.erb
@@ -1,9 +1,7 @@
 
 <% tips&.each do |tip|  %>
     <div class="cardtips">
-      <a class="tipsimage" href="#">
-        <i class="fa-solid <%= find_icon(tip.challenge.category) %>"></i>
-      </a>
+      <i class="<%= tip.challenge.category.downcase %>-icon tipsimage fa-solid <%= find_icon(tip.challenge.category) %>"></i>
       <li>
         <div class="info d-flex justify-content-between">
           <h5><strong><%= tip.name %></strong></h5>
@@ -25,11 +23,8 @@
   <% end %>
   <% usertips&.each do |tip|  %>
     <div class="cardtips">
-      <a class="tipsimage" href="#">
-        <i class="fa-solid <%= find_icon(tip.booking.challenge.category) %>"></i>
-      </a>
-      <li>
-        <div class="info d-flex justify-content-between">
+      <i class="<%= tip.booking.challenge.category.downcase %>-icon tipsimage fa-solid <%= find_icon(tip.booking.challenge.category) %>"></i>
+        <li>
           <h5><strong><%= tip.name %></strong></h5>
           <% if current_user.saved_user_tips.where(usertip: tip).empty? %>
             <%= link_to usertip_saved_user_tips_path(tip), data: {turbo_method: :post}, class:'tipsicon mt-2 me-2' do %>
@@ -41,9 +36,8 @@
               <i class="fa fa-bookmark"></i>
             <% end %>
           <% end %>
-        </div>
-        <p class="description desc-truncate" data-action="click->tips-card#revealDescription"><%= tip.description %></p>
-        <%# <p>Challenge category: <%= tip.booking.challenge.category  %>
+          <p class="description desc-truncate" data-action="click->tips-card#revealDescription"><%= tip.description %></p>
+          <%# <p>Challenge category: <%= tip.booking.challenge.category  %>
       </li>
     </div>
   <% end %>
