--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -11,4 +11,5 @@
 @import "font";
 @import "header";
 @import "container_nav";
-@import "custom_form"
+@import "custom_form";
+@import "custom_calendar";
