--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -25,7 +25,7 @@
     <li class="d-flex justify-content-around">
       <% else %>
         <div class="booking-goal" data-controller="booking-goal">
-          <h3 data-booking-goal-target="goal">Set goal: 50%</h3>
+          <h4 data-booking-goal-target="goal">Set your weekly goal : 50%</h4>
           <p><%= f.input :goal, as: :range, label: false, input_html: { data: { action:'input->booking-goal#updateGoal' } } %></p>
         </div>
       <% end %></li>
