--- a/app/views/pages/profile_challenge.html.erb
+++ b/app/views/pages/profile_challenge.html.erb
@@ -36,7 +36,7 @@
   </div>
   <div class="accordion-item">
     <h2 class="accordion-header" id="panelsStayOpen-headingTwo-challenge">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo-challenge" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo-challenge">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo-challenge" aria-expanded="true" aria-controls="panelsStayOpen-collapseTwo-challenge">
         Past challenges
       </button>
     </h2>
