--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -25,7 +25,7 @@
 .progress {
   background-color: #9ABDA4;
   border-radius: 2px;
-  margin-bottom: 1rem;
+  margin: 1rem 0;
   border-radius: 50px;
 }
 
@@ -66,7 +66,7 @@
 .card.card-scroll-cat {
   display: flex;
   flex-direction: column;
-  flex: 0 0 40%;
+  flex: 0 0 43%;
   padding: 0.5rem 1rem;
   border-radius: 10px;
   scroll-snap-align: start;
